<resources>
    <string name="app_name">My Application</string>
    <string name="car1">Car1</string>
    <string name="car2">Car2</string>
    <string name="car3">Car3</string>
    <string name="car_number">CarNumber</string>
    <string name="car_brand">CarBrand</string>
    <string name="car_name">CarName</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="number_text">empty</string>
    <string name="brand_text">empty</string>
    <string name="name_text">empty</string>

</resources>
