<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:textAlignment="center">

    <Button
            android:text="@string/car1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/car1_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/car2_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/car2_button" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/car2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/car2_button" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/car1_button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/car3_button"/>
    <Button
            android:text="@string/car3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/car3_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/car2_button" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintStart_toEndOf="@+id/car2_button"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/number_edit"
            android:textAlignment="center"
            android:hint="@string/car_number"
            app:layout_constraintTop_toBottomOf="@+id/car1_button"
            app:layout_constraintBottom_toTopOf="@+id/update_button" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.23000002"/>
    <EditText
            android:layout_width="213dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/brand_edit"
            android:textAlignment="center"
            android:hint="@string/car_brand"
            app:layout_constraintTop_toBottomOf="@+id/car2_button"
            app:layout_constraintBottom_toTopOf="@+id/update_button" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name_edit"
            android:textAlignment="center"
            android:hint="@string/car_name"
            app:layout_constraintTop_toBottomOf="@+id/car2_button"
            app:layout_constraintBottom_toTopOf="@+id/update_button" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.8"/>
    <Button
            android:text="@string/update_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/update_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/delete_button"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Small" android:textColorLink="#76bf5e"/>
    <Button
            android:text="@string/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/delete_button"
            app:layout_constraintStart_toEndOf="@+id/update_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/Widget.AppCompat.Button.Small"/>
    <TextView
            android:text="@string/number_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_text" android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car2_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/update_button" app:layout_constraintVertical_bias="0.23000002"/>
    <TextView
            android:text="@string/brand_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/brand_text"
            android:textAlignment="center" android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/car2_button"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/update_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name_text" android:textAlignment="center"
            android:visibility="gone"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/update_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/car2_button" app:layout_constraintVertical_bias="0.77"/>

</androidx.constraintlayout.widget.ConstraintLayout>